<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/create_auction_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="85dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/auction_title"
        android:inputType="text"
        android:lines="1"
        android:maxLength="20"
        android:maxLines="1" />

    <EditText
        android:id="@+id/create_auction_description"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/auction_description"
        android:inputType="textMultiLine"
        android:maxLength="100"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/textGray" />

    <EditText
        android:id="@+id/create_auction_duration"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:inputType="numberDecimal"
        android:hint="@string/duration_of_auction" />


    <Button
        android:id="@+id/create_auction_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="85dp"
        android:background="@color/colorPrimary"
        android:text="@string/add_auction"
        android:textColor="@color/textWhite" />

</LinearLayout>