<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/auction_title"
            android:textColor="@color/textGray"
            android:textSize="@dimen/auction_title_text_size" />

        <TextView
            android:id="@+id/bid_history_auction_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/textGray"
            android:textSize="@dimen/auction_title_text_size" />


    </LinearLayout>


    <TextView
        android:id="@+id/bid_history_auction_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/auction_end_date"
        android:textSize="@dimen/auction_detail_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/your_bid"
            android:textColor="@color/textGray"
            android:textSize="@dimen/auction_detail_size" />

        <TextView
            android:id="@+id/bid_history_your_bid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/auction_detail_size" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/current_max_bid"
            android:textColor="@color/textGray"

            android:textSize="@dimen/auction_detail_size" />

        <TextView
            android:id="@+id/bid_history_current_bid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"

            android:textSize="@dimen/auction_detail_size" />


    </LinearLayout>

    <TextView
        android:id="@+id/bid_history_auction_winner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/current_user_auction_winner"
        android:textColor="@color/textGray"
        android:textSize="@dimen/auction_detail_size"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"

        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/textWhite" />


</LinearLayout>