<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/user_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/usericon" />

    <FrameLayout
        android:id="@+id/auction_bid_history_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_icon"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/bullet"
            android:textColor="@color/textWhite"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/auction_bid_history_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="@string/menu_auction_bid_list"
            android:textColor="@color/textWhite"
            android:textSize="20dp" />

        <Button
            android:id="@+id/auction_bid_history_menu_button"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@android:color/transparent"
            android:stateListAnimator="@null" />


    </FrameLayout>


    <FrameLayout
        android:id="@+id/auction_list_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/auction_bid_history_frame"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/bullet"
            android:textColor="@color/textWhite"
            android:textSize="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="@string/menu_auction_list"
            android:textColor="@color/textWhite"
            android:textSize="20dp" />

        <Button
            android:id="@+id/auction_list_menu_button"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@android:color/transparent"
            android:stateListAnimator="@null" />


    </FrameLayout>

    <FrameLayout
        android:id="@+id/logout_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/auction_list_frame"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/bullet"
            android:textColor="@color/textWhite"
            android:textSize="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="@string/menu_logout"
            android:textColor="@color/textWhite"
            android:textSize="20dp" />

        <Button
            android:id="@+id/logout_menu_button"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@android:color/transparent"
            android:stateListAnimator="@null" />

    </FrameLayout>

</RelativeLayout>